--- a/Chatbot/common/public/index.html
+++ b/Chatbot/common/public/index.html
@@ -284,17 +284,24 @@
             gap: 12px;
         }
 
-        .input-area input {
+        .input-area textarea {
             flex: 1;
             padding: 12px 16px;
             border: 2px solid #e0e0e0;
             border-radius: 24px;
             font-size: 16px;
+            font-family: inherit;
             outline: none;
             transition: border-color 0.2s;
+            resize: none;
+            overflow-y: auto;
+            min-height: 48px;
+            max-height: 200px;
+            line-height: 1.5;
+            height: 48px;
         }
 
-        .input-area input:focus {
+        .input-area textarea:focus {
             border-color: #667eea;
         }
 
@@ -349,12 +356,12 @@
             </div>
         </div>
         <div class="input-area">
-            <input 
-                type="text" 
+            <textarea 
                 id="messageInput" 
-                placeholder="Type your message..." 
+                placeholder="Type your message... (Press Enter to send, Shift+Enter for new line)" 
                 autocomplete="off"
-            >
+                rows="1"
+            ></textarea>
             <button id="sendButton">Send</button>
         </div>
     </div>
@@ -366,6 +373,25 @@
         let sessionId = 'session-' + Date.now();
         let currentAssistantMessage = null;
         let currentAssistantRawContent = '';
+
+        // Auto-resize textarea based on content
+        function autoResizeTextarea(textarea) {
+            // Reset height to auto to get the correct scrollHeight
+            textarea.style.height = 'auto';
+            // Calculate new height (min 48px, max 200px)
+            const newHeight = Math.min(Math.max(textarea.scrollHeight, 48), 200);
+            textarea.style.height = newHeight + 'px';
+            // Show scrollbar if content exceeds max height
+            textarea.style.overflowY = textarea.scrollHeight > 200 ? 'auto' : 'hidden';
+        }
+
+        // Initialize textarea resize
+        messageInput.addEventListener('input', function() {
+            autoResizeTextarea(this);
+        });
+
+        // Set initial height
+        autoResizeTextarea(messageInput);
 
         // Configure marked.js for markdown rendering
         if (typeof marked !== 'undefined') {
@@ -657,6 +683,8 @@
             messageInput.disabled = true;
             sendButton.disabled = true;
             messageInput.value = '';
+            // Reset textarea height
+            messageInput.style.height = 'auto';
 
             // Add user message
             addMessage('user', message);
@@ -834,15 +862,17 @@
 
         // Event listeners
         sendButton.addEventListener('click', sendMessage);
-        messageInput.addEventListener('keypress', (e) => {
+        messageInput.addEventListener('keydown', (e) => {
             if (e.key === 'Enter' && !e.shiftKey) {
                 e.preventDefault();
                 sendMessage();
             }
+            // Allow Shift+Enter for new lines (default behavior)
         });
 
-        // Focus input on load
+        // Focus textarea on load and set initial height
         messageInput.focus();
+        autoResizeTextarea(messageInput);
     </script>
 </body>
 </html>
